# planning-by-abstracting-over-opponent-models

./: .gitignore  pyproject.toml  result.csv
models/: agent_model_2.pt  agent_model_4.pt  agent_model_6.pt
planning_by_abstracting_over_opponent_models/: agent.py  agent_model.pt  config.py  env.py  main.py  pommerman_wrapped_env.py  test.py  train.py  utils.py
planning_by_abstracting_over_opponent_models/learning/: agent.py  agent_loss.py  agent_model.py  features_extractor.py  learn.py  main.py  monitor.py  pommerman_env_utils.py  reward_shaper.py  rl_agent.py  soft_hard_multihead_attention.py  test.py  test_agent.py  test_agent.sh  test_rl.sh  train.py  train_agent.sh  train_agent_meteor.sh  train_agent_slurm.sh  train_all.sh  train_array_simple_slurm.sh  train_array_static_slurm.sh  train_mixed_agent_slurm.sh  train_random_agent_slurm.sh  train_simple_agent_slurm.sh  train_smart_agent_slurm.sh  train_static_agent_slurm.sh  visualize_cam.py
planning_by_abstracting_over_opponent_models/modeling/: agent.py  agent_loss.py  agent_model.py  features_extractor.py
planning_by_abstracting_over_opponent_models/models/: agent_model.model  agent_model.pt  agent_model_60000.pt  agent_model_90000.pt
planning_by_abstracting_over_opponent_models/planning/: evaluate_smmcts.py  evaluate_smmcts.sh  mcts.py  modified_simple_agent.py  neural_network_state_evaluator.py  player.py  random_rollout_evaluator.py  random_rollout_state_evaluator.py  result.txt  reward_model.py  smmcts.py  (+14 more)
saved_models/: agent_model_2.pt
tests/: test_planning_by_abstracting_over_opponent_models.py
(+59 files in other folders)
